--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Publicweb</title>
+  <title>Login & Register</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <link href="http://fonts.googleapis.com/css?family=Droid+Sans:400,700" rel="stylesheet" type="text/css">
+
   <%= csrf_meta_tags %>
 </head>
 <body>
 
 <%= yield %>
 
+<div class="footer">&copy; 2014 Flux - <a href="#" id="about" title="About">About</a> - <a href="#" id="contact" title="Contact">Contact</a> - <a href="#" id="info" title="Info">Info</a> </div>
+    
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 </body>
 </html>
